--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ subjects:
 - !lcsh 'Amputees -- Fiction'
 - !lcsh 'Entomologists -- Fiction'
 - !lcsh 'Criminals -- Fiction'
+- GITenberg
 title: Slippy McGee, Sometimes Known as the Butterfly Man
 url: http://www.gutenberg.org/ebooks/15843
